<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home"
    >

    <fragment
        android:id="@+id/nav_home"
        android:name="com.wayloo.wayloo.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_gallery"
        android:name="com.wayloo.wayloo.ui.mispeluquerias.MisPeluqueriasFragment"
        android:label="@string/menu_gallery"
        tools:layout="@layout/fragment_mispeluquerias" />

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="com.wayloo.wayloo.ui.anadirpeluqueria.AnadirPeluqueriaFragment"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/fragment_anadirpeluqueria" />

    <fragment
        android:id="@+id/nav_tools"
        android:name="com.wayloo.wayloo.ui.misReservas.MisReservasFragment"
        android:label="@string/menu_perfil"
        tools:layout="@layout/fragment_misreservas" />

    <fragment
        android:id="@+id/nav_share"
        android:name="com.wayloo.wayloo.ui.share.ShareFragment"
        android:label="@string/Compartir"
        tools:layout="@layout/fragment_share" />

    <fragment
        android:id="@+id/nav_send"
        android:name="com.wayloo.wayloo.ui.editarbarber.SendFragment"
        android:label="@string/menu_send"
        tools:layout="@layout/fragment_editar_barber" />
</navigation>