<?xml version="1.0" encoding="utf-8"?>
<ScrollView android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/backGroudMain"
    android:padding="20px"
    >

    <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">


        <ImageView
            android:id="@+id/imageViewProfileFoto"
            android:layout_gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/com_facebook_profile_picture_blank_square"

            />

        <Button
            android:id="@+id/buttonImgperfil"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/Seleccione_Imagen"

            />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="10dp"
            android:text="@string/texto_CompletarFormulario"
            android:textColor="@color/whiteText" />

        <EditText
            android:drawableLeft="@drawable/phone"
            android:drawableTint="@color/GRAY"
            android:textColorHint="@color/GRAY"
            android:id="@+id/etxt_telefono"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="#FFFFFF"
            android:digits="0123456789+"
            android:hint="@string/Teléfono"
            android:inputType="phone"
            android:textColor="#ffffff" />

        <EditText
            android:drawableTint="@color/GRAY"
            android:drawableLeft="@drawable/emailicon"
            android:textColorHint="@color/GRAY"
            android:id="@+id/etxt_emailComplete"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="#FFFFFF"
            android:hint="@string/prompt_email"
            android:textColor="#ffffff" />


        <EditText
            android:drawableLeft="@drawable/key"
            android:drawableTint="@color/GRAY"
            android:textColorHint="@color/GRAY"
            android:id="@+id/etxt_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/etxt_email"
            android:layout_alignEnd="@+id/etxt_email"
            android:layout_alignRight="@+id/etxt_email"
            android:backgroundTint="#FFFFFF"
            android:hint="@string/Contraseña"
            android:inputType="textPassword"
            android:textColor="#ffffff"
            app:layout_constraintTop_toTopOf="@+id/etxt_email"
            tools:layout_editor_absoluteX="-16dp" />


        <Spinner
            android:id="@+id/ciudad_spinner"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="#FFFFFF"
            android:entries="@array/citys_array"
            android:textColor="#ffffff"
            android:textColorHint="#ffffff"
            />


        <Button
            android:id="@+id/btn_register"
            android:layout_width="121dp"
            android:layout_height="55dp"
            android:layout_gravity="center"
            android:layout_marginTop="36dp"
            android:background="@drawable/shapes"
            android:clickable="false"
            android:text="@string/Registrar"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/et_mostrar_hora_picker_fin" />
    </LinearLayout>

</ScrollView>