<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivityZoomPeluquero"
    android:background="@color/backGroudMain"
>

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbarPerfil"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        app:popupTheme="@style/AppTheme.PopupOverlay" >

            <Button
                android:id="@+id/editarButonPerfil"
                android:background="@color/colorPrimary"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="?android:attr/borderlessButtonStyle"
                android:layout_gravity="right"
                android:elevation="0dp"
                android:stateListAnimator="@null"
                android:text="Guardar"></Button>

    </androidx.appcompat.widget.Toolbar>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="10dp">



            <ImageView
            android:id="@+id/imageViewPrincipalFotoPerfil"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            tools:srcCompat="@drawable/ic_logor" />

            <TextView
                android:id="@+id/textViewTituCambiar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/CambiarFotoPerfil"
                android:textColor="@color/whiteText" />

                <TextView
                    android:id="@+id/textViewTituPerfilTel"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/Teléfono"
                    android:textColor="@color/whiteText"
                    android:textStyle="bold"/>

            <EditText
                android:id="@+id/TelBarSPerfil"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Telefono"
                android:textColor="@color/whiteText"></EditText>

                <TextView
                    android:id="@+id/textViewTituPerfilNombre"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/Nombre"
                    android:textStyle="bold"
                    android:textColor="@color/whiteText" />
            <EditText
                android:id="@+id/NomBarSPerfil"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Nombre"
                android:textColor="@color/whiteText"></EditText>

                <TextView
                    android:id="@+id/textViewTituPerfilApellido"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/Apellido"
                    android:textStyle="bold"
                    android:textColor="@color/whiteText" />
                <EditText
                    android:id="@+id/ApellBarSPerfil"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Apellido"
                    android:textColor="@color/whiteText"></EditText>


                <TextView
                    android:id="@+id/textViewTituPerfilEmail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/prompt_email"
                    android:textStyle="bold"
                    android:textColor="@color/whiteText" />

                <EditText
                android:id="@+id/emailPerfil"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Email"
                android:textColor="@color/whiteText"></EditText>

                <TextView
                    android:id="@+id/textViewTituPerfilCiudad"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/Ciudad"
                    android:textStyle="bold"
                    android:textColor="@color/whiteText" />
            <EditText
                android:id="@+id/CiudadPerfil"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Ciudad"
                android:textColor="@color/whiteText"></EditText>
        </LinearLayout>



            <View
                android:id="@+id/view"
                android:layout_height="0.5dp"
                android:layout_width="match_parent"
                android:background="@color/span_gris"
                android:layout_gravity="left"
                />

            <!-- Linear modo admin -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:padding="10dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:textStyle="bold"
                    android:textColor="@color/whiteText"
                    android:text="Modo Administrador">

                </TextView>
                <Switch
                    android:id="@+id/toggleAdministrar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:shadowColor="@color/whiteText"
                    android:theme="@style/SwitchTheme"
                    ></Switch>
            </LinearLayout>

            <View
                android:id="@+id/viewMODOB"
                android:layout_height="0.5dp"
                android:layout_width="match_parent"
                android:background="@color/span_gris"
                android:layout_gravity="left"
                android:visibility="gone"
                />

            <!-- Linear Admin a barbero -->
            <LinearLayout
                android:id="@+id/linearHabilitarmodoBarbero"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:visibility="gone"
                android:padding="10dp">
                <TextView
                    android:id="@+id/txtTituHabilitarModo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/whiteText"
                    android:layout_gravity="center"
                    android:layout_weight="2"
                    android:textStyle="bold"
                    android:text="Habilitar modo barbero                                     "></TextView>

                <CheckBox
                    android:layout_weight="0"
                    android:id="@+id/checkBoxModoBarbero"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:buttonTint="@color/whiteText"
                    android:gravity="center"
                    android:hint="@color/colorAccent"
                    android:text="CheckBox" />

            </LinearLayout>


            <View
                android:layout_height="0.5dp"
                android:layout_width="match_parent"
                android:background="@color/span_gris"
                android:layout_gravity="left"
                />
            <!-- Linear cambiar contraseña-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="10dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Cambiar Contraseña"
                    android:textColor="@color/whiteText"
                    android:layout_weight="1"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/textViewCambiarContra"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text=">"
                    android:textSize="25dp"
                    android:textColor="@color/whiteText" />

            </LinearLayout>

            <View
                android:layout_height="0.5dp"
                android:layout_width="match_parent"
                android:background="@color/span_gris"
                android:layout_gravity="left"
                />

        <!-- Linear cambiar Eliminar perfil-->
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"
            android:padding="10dp">
            <TextView
                android:id="@+id/editarButonEliminarPerfil"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:textColor="@color/whiteText"
                android:text="    Eliminar Perfil    " /></RelativeLayout>


        </LinearLayout>

        </ScrollView>


    </LinearLayout>
